test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/valid/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    data1: i32 = 10
    extrn1: i32 = 20
    
    return extrn1 - (extrn1 / data1) * data1
}
