test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_labels/extra_credit/goto_global_var.plx
pub x: i32 = 10

pub fn main(none) i32 {
    #  goto statements can only target labels, not variables. 
    jump x
    return 0
}
